
* Generalized Isar history, with support for linear undo, direct state
addressing etc.

* Recovered hiding of consts, which was accidentally broken in
Isabelle2007.  Potential INCOMPATIBILITY, ``hide const c'' really
makes c inaccessible; consider using ``hide (open) const c'' instead.

* Removed exotic 'token_translation' command.  INCOMPATIBILITY, use ML
interface instead.


*** Pure ***

* Global versions of theorems stemming from classes do not carry
a parameter prefix any longer.  INCOMPATIBILITY.

* Dropped "locale (open)".  INCOMPATBILITY.

* Interpretation commands no longer attempt to simplify goal.
INCOMPATIBILITY: in rare situations the generated goal differs.  Use
methods intro_locales and unfold_locales to clarify.

* Interpretation commands no longer accept interpretation attributes.
INCOMPATBILITY.

* Command 'instance': attached definitions no longer accepted.
INCOMPATIBILITY, use proper 'instantiation' target.

* Keyword 'code_exception' now named 'code_abort'.  INCOMPATIBILITY.

* The 'axiomatization' command now only works within a global theory
context.  INCOMPATIBILITY.


*** Document preparation ***

* Antiquotation @{lemma} now imitates a regular terminal proof,
demanding keyword 'by' and supporting the full method expression
syntax just like the Isar command 'by'.


*** HOL ***

* HOL/Orderings: class "wellorder" moved here, with explicit induction
rule "less_induct" as assumption.  For instantiation of "wellorder" by
means of predicate "wf", use rule wf_wellorderI.  INCOMPATIBILITY.

* HOL/Orderings: added class "preorder" as superclass of "order".
INCOMPATIBILITY: Instantiation proofs for order, linorder
etc. slightly changed.  Some theorems named order_class.* now named
preorder_class.*.

* HOL/Ring_and_Field and HOL/Divides: Definition of "op dvd" has been
moved to separate class dvd in Ring_and_Field; a couple of lemmas on
dvd has been generalized to class comm_semiring_1.  Likewise a bunch