@@ -31,10 +31,10 @@ struct
 
 datatype nat = Suc of nat | Zero_nat;
 
-fun eq_nat Zero_nat Zero_nat = true
-  | eq_nat (Suc nat) (Suc nat') = eq_nat nat nat'
+fun eq_nat (Suc a) Zero_nat = false
   | eq_nat Zero_nat (Suc a) = false
-  | eq_nat (Suc a) Zero_nat = false;
+  | eq_nat (Suc nat) (Suc nat') = eq_nat nat nat'
+  | eq_nat Zero_nat Zero_nat = true;
 
 val eq_nata = {eq = eq_nat} : nat HOL.eq;
 
@@ -63,23 +63,23 @@ datatype ('a, 'b) searchtree =
   Branch of ('a, 'b) searchtree * 'a * ('a, 'b) searchtree |
   Leaf of 'a * 'b;
 
-fun update (A1_, A2_) (it, entry) (Branch (t1, key, t2)) =
-  (if HOL.less_eq
-        ((Orderings.ord_preorder o Orderings.preorder_order o
-           Orderings.order_linorder)
-          A2_)
-        it key
-    then Branch (update (A1_, A2_) (it, entry) t1, key, t2)
-    else Branch (t1, key, update (A1_, A2_) (it, entry) t2))
-  | update (A1_, A2_) (it, entry) (Leaf (key, vala)) =
-    (if HOL.eqop A1_ it key then Leaf (key, entry)
-      else (if HOL.less_eq
-                 ((Orderings.ord_preorder o Orderings.preorder_order o
-                    Orderings.order_linorder)
-                   A2_)
-                 it key
-             then Branch (Leaf (it, entry), it, Leaf (key, vala))
-             else Branch (Leaf (key, vala), it, Leaf (it, entry))));
+fun update (A1_, A2_) (it, entry) (Leaf (key, vala)) =
+  (if HOL.eqop A1_ it key then Leaf (key, entry)
+    else (if HOL.less_eq
+               ((Orderings.ord_preorder o Orderings.preorder_order o
+                  Orderings.order_linorder)
+                 A2_)
+               it key
+           then Branch (Leaf (it, entry), it, Leaf (key, vala))
+           else Branch (Leaf (key, vala), it, Leaf (it, entry))))
+  | update (A1_, A2_) (it, entry) (Branch (t1, key, t2)) =
+    (if HOL.less_eq
+          ((Orderings.ord_preorder o Orderings.preorder_order o
+             Orderings.order_linorder)
+            A2_)
+          it key
+      then Branch (update (A1_, A2_) (it, entry) t1, key, t2)
+      else Branch (t1, key, update (A1_, A2_) (it, entry) t2));
 
 val example : (Nat.nat, (Nat.nat list)) searchtree =
   update (Nat.eq_nata, Nat.linorder_nat)
